--- a/smh/package.json
+++ b/smh/package.json
@@ -25,6 +25,8 @@
     "consign": "^0.1.6",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^5.7.0",
+    "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5"
   }
